<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            >

        <!-- user's name -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp">

    </Spinner>

    <!-- username (email or phone number)-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_or_phone_number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password2_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_your_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="@dimen/_118sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_4sdp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_13sdp"


        />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>