<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="#00000000"
                android:scaleType="fitXY"
                app:riv_border_color="#333333"
                app:riv_border_width="2dip"
                app:riv_corner_radius_bottom_left="60dp"
                app:riv_corner_radius_bottom_right="60dp"
                app:riv_corner_radius_top_left="60dp"
                app:riv_corner_radius_top_right="60dp"
                app:riv_mutate_background="true"
                app:riv_tile_mode_x="clamp"

                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choosePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose a photo"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <!-- user's name -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/saved_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="mahdi hadian"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/account_type" />

            <TextView
                android:id="@+id/saved_account_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hospital"
                android:textSize="@dimen/_20sdp" />

            <!-- username (email or phone number)-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/email_or_phone_number" />

            <TextView
                android:id="@+id/saved_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="mahdihadian@hotmail.com"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/number_of_added_devices" />

            <TextView
                android:id="@+id/added_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/application_s_language" />

            <!-- language spinner -->
            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/emergency_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/emergency_number" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/save_info"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="@dimen/_118sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/background_button"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/_4sdp"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>


